[gd_scene load_steps=61 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://Camera2D.gd" type="Script" id=2]
[ext_resource path="res://Sprites/dying/Layer 7.png" type="Texture" id=3]
[ext_resource path="res://Sprites/dying/Layer 9.png" type="Texture" id=4]
[ext_resource path="res://Sprites/dying/Layer 11.png" type="Texture" id=5]
[ext_resource path="res://Sprites/dying/Layer 12.png" type="Texture" id=6]
[ext_resource path="res://Sprites/dying/end.png" type="Texture" id=7]
[ext_resource path="res://Sprites/dog/sleep final/Layer 11.png" type="Texture" id=8]
[ext_resource path="res://Sprites/dog/sleep final/Layer 12.png" type="Texture" id=9]
[ext_resource path="res://Sprites/dog/sleep final/Layer 13.png" type="Texture" id=10]
[ext_resource path="res://Sprites/dog/sleep final/Layer 14.png" type="Texture" id=11]
[ext_resource path="res://Sprites/dog/sleep final/Layer 15.png" type="Texture" id=12]
[ext_resource path="res://Sprites/dog/sleep final/Layer 16.png" type="Texture" id=13]
[ext_resource path="res://Sprites/dog/jumping/2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/dog/jumping/3.png" type="Texture" id=15]
[ext_resource path="res://Sprites/dog/running/Layer 1.png" type="Texture" id=16]
[ext_resource path="res://Sprites/dog/running/Layer 2.png" type="Texture" id=17]
[ext_resource path="res://Sprites/dog/running/Layer 3.png" type="Texture" id=18]
[ext_resource path="res://Sprites/dog/running/Layer 4.png" type="Texture" id=19]
[ext_resource path="res://Sprites/dog/running/Layer 5.png" type="Texture" id=20]
[ext_resource path="res://Sprites/dog/running/Layer 6.png" type="Texture" id=21]
[ext_resource path="res://Sprites/dog/running/Layer 7.png" type="Texture" id=22]
[ext_resource path="res://Sprites/dog/running/Layer 8.png" type="Texture" id=23]
[ext_resource path="res://Sprites/dog/idle/Layer 8.png" type="Texture" id=24]
[ext_resource path="res://Sprites/dog/idle/Layer 9.png" type="Texture" id=25]
[ext_resource path="res://Sprites/dog/idle/Layer 10.png" type="Texture" id=26]
[ext_resource path="res://Sprites/dog/idle/Layer 11.png" type="Texture" id=27]
[ext_resource path="res://Sprites/dog/idle/Layer 12.png" type="Texture" id=28]
[ext_resource path="res://Sprites/dog/idle/Layer 13.png" type="Texture" id=29]
[ext_resource path="res://Sprites/dog/idle/Layer 14.png" type="Texture" id=30]
[ext_resource path="res://Sprites/dog/wall_cling.png" type="Texture" id=31]
[ext_resource path="res://Sprites/dog/jumping/0.png" type="Texture" id=32]
[ext_resource path="res://Sprites/dog/jumping/1.png" type="Texture" id=33]
[ext_resource path="res://Sprites/dog/bark final/1.png" type="Texture" id=34]
[ext_resource path="res://Sprites/dog/bark final/2.png" type="Texture" id=35]
[ext_resource path="res://Sprites/dog/bark final/3.png" type="Texture" id=36]
[ext_resource path="res://Sprites/dog/bark final/4.png" type="Texture" id=37]
[ext_resource path="res://Sprites/cat/Idle/1.png" type="Texture" id=38]
[ext_resource path="res://Sprites/cat/Idle/2.png" type="Texture" id=39]
[ext_resource path="res://Sprites/cat/Idle/3.png" type="Texture" id=40]
[ext_resource path="res://Sprites/cat/Idle/4.png" type="Texture" id=41]
[ext_resource path="res://Sprites/cat/Idle/5.png" type="Texture" id=42]
[ext_resource path="res://Sprites/cat/Idle/6.png" type="Texture" id=43]
[ext_resource path="res://Sprites/babushka attack final/start.png" type="Texture" id=44]
[ext_resource path="res://Sprites/babushka attack final/1.png" type="Texture" id=45]
[ext_resource path="res://Sprites/babushka attack final/2.png" type="Texture" id=46]
[ext_resource path="res://Sprites/babushka attack final/3.png" type="Texture" id=47]
[ext_resource path="res://Sprites/babushka attack final/4.png" type="Texture" id=48]
[ext_resource path="res://Sprites/babushka attack final/end.png" type="Texture" id=49]
[ext_resource path="res://Sprites/lightmap.png" type="Texture" id=50]
[ext_resource path="res://Sprites/babushka hands/left.png" type="Texture" id=51]
[ext_resource path="res://Sprites/cat/cat lamp.png" type="Texture" id=52]
[ext_resource path="res://Sprites/possess arrow.png" type="Texture" id=53]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ) ],
"loop": false,
"name": "dying",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "Sleep",
"speed": 10.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ) ],
"loop": false,
"name": "Falling",
"speed": 15.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "Run",
"speed": 20.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 31 ) ],
"loop": true,
"name": "Slide",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ) ],
"loop": false,
"name": "Jumping",
"speed": 15.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 37 ), ExtResource( 36 ) ],
"loop": false,
"name": "Bark",
"speed": 15.0
} ]

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "cat_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ) ],
"loop": false,
"name": "attack",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 154.008

[sub_resource type="CircleShape2D" id=9]
radius = 258.098

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 32.0272, 4.5182 )

[node name="player" type="KinematicBody2D"]
collision_layer = 65
collision_mask = 65
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
zoom = Vector2( 1.5, 1.5 )
smoothing_enabled = true
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
shape = SubResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 3 )
animation = "Idle"
frame = 6
playing = true

[node name="LeftWallCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -64, 0 )
collision_mask = 5

[node name="RightWallCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 64, 0 )
collision_mask = 5

[node name="WhipLine" type="Line2D" parent="."]
visible = false
material = SubResource( 4 )
z_index = -2
points = PoolVector2Array( 0, 0, 0, 0 )
width = 5.0
texture_mode = 1940383799

[node name="CatSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.375, 0.375 )
z_index = -1
frames = SubResource( 5 )
frame = 2
playing = true
offset = Vector2( 0, -180 )

[node name="Light2D" type="Light2D" parent="CatSprite"]
texture = ExtResource( 50 )
offset = Vector2( 0, -180 )
texture_scale = 5.0
color = Color( 0.203922, 0.364706, 0.419608, 1 )
energy = 0.9

[node name="ClawSprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
z_index = 2
texture = ExtResource( 51 )

[node name="LampSprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 52 )
offset = Vector2( 0, -130 )

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 18
collision_mask = 18

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
modulate = Color( 1, 0, 0, 1 )
shape = SubResource( 2 )

[node name="BashArea" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="BashArea"]
shape = SubResource( 8 )

[node name="AttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 9 )

[node name="FloorArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorArea"]
position = Vector2( 0, 40 )
shape = SubResource( 10 )

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="BashArrow" type="Sprite" parent="."]
visible = false
rotation = 0.820305
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 53 )
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
